tests/machine/x/c/load_yaml.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/load_yaml.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/load_yaml.c:333:24: error: invalid initializer
  333 |   list_Person people = _load_json("../interpreter/valid/people.yaml");
      |                        ^~~~~~~~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:334:3: error: unknown type name ‘list_adultsItem’; did you mean ‘list_AdultsItem’?
  334 |   list_adultsItem tmp1 = list_adultsItem_create(people.len);
      |   ^~~~~~~~~~~~~~~
      |   list_AdultsItem
/workspace/mochi/tests/machine/x/c/load_yaml.c:334:26: warning: implicit declaration of function ‘list_adultsItem_create’; did you mean ‘list_AdultsItem_create’? [-Wimplicit-function-declaration]
  334 |   list_adultsItem tmp1 = list_adultsItem_create(people.len);
      |                          ^~~~~~~~~~~~~~~~~~~~~~
      |                          list_AdultsItem_create
/workspace/mochi/tests/machine/x/c/load_yaml.c:341:9: error: request for member ‘data’ in something not a structure or union
  341 |     tmp1.data[tmp2] = (AdultsItem){.name = p.name, .email = p.email};
      |         ^
/workspace/mochi/tests/machine/x/c/load_yaml.c:344:7: error: request for member ‘len’ in something not a structure or union
  344 |   tmp1.len = tmp2;
      |       ^
/workspace/mochi/tests/machine/x/c/load_yaml.c:345:28: error: invalid initializer
  345 |   list_AdultsItem adults = tmp1;
      |                            ^~~~

   1: #include <stdio.h>
